--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -82,6 +82,8 @@
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_profesor') }}">{% trans %}label.usuarios.profesor{% endtrans %}</a></li>
                     </ul>
                 </li>
+                <li><a href="{{ path('_expediente_sysadmin_route') }}"><em>{% trans %}label.routes{% endtrans %}</em><strong></strong></a></li>
+                <li><a href="{{ path('_expediente_sysadmin_bus') }}"><em>{% trans %}label.buses{% endtrans %}</em><strong></strong></a></li>
             {% endif %}
 				<li><a href="index-1.html"><em>services</em><strong></strong></a></li>
 				<li><a href="index-6.html"><em>contacts</em><strong></strong></a></li>
