--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ruta/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ruta/show.html.twig
@@ -14,6 +14,7 @@
     Tecnotek.module = "showRoute";
     Tecnotek.imagesURL = "/images";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
+    Tecnotek.updateFail = {% if updateRejected is defined %} true {% else %} false {% endif %};
 </script>
 {% endblock %}
 
@@ -60,7 +61,7 @@
                 <div id="editContainer" style="display: none;">
                     <form class="customForm" id="createAdminForm" action="{{ path('_expediente_sysadmin_route_update') }}" method="post">
                         <input type="hidden" id="id" name="id" value="{{ entity.id }}">
-
+<!--
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.code{% endtrans %}</span><input type="text" id="code" name="code" required="required" value=""></label>
 
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.name{% endtrans %}</span><input type="text" id="name" name="name" required="required" value=""></label>
@@ -68,6 +69,22 @@
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.description{% endtrans %}</span><input type="text" id="description" name="description" required="required" value=""></label>
 
                         <label><span class="text-form" style="min-width: 150px;">{% trans %}label.mapUrl{% endtrans %}</span><input type="text" id="mapUrl" name="mapUrl" required="required" value=""></label>
+-->
+                        {{ form_errors(form) }}
+
+                        {{ form_widget(form._token) }}
+
+                        <div class="formErrors">{{ form_errors(form.code) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.code{% endtrans %}</span>{{ form_widget(form.code) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.name) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.name{% endtrans %}</span>{{ form_widget(form.name) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.description) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.description{% endtrans %}</span>{{ form_widget(form.description) }}</label>
+
+                        <div class="formErrors">{{ form_errors(form.mapUrl) }}</div>
+                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.route{% endtrans %}</span>{{ form_widget(form.mapUrl) }}</label>
 
                         <div class="left btn" id="btnCancelEdit">{% trans %}label.cancelar{% endtrans %}</div>
                         <div class="left" style="margin-left: 25px;"><input class="btn" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
